# viennacl-dev

./: .gitignore  CMakeLists.txt
cmake/: ViennaCLCommon.cmake
examples/benchmarks/: CMakeLists.txt  hsa.cpp
examples/tutorial/: CMakeLists.txt  custom-context.cpp
libviennacl/: CMakeLists.txt
tests/: CMakeLists.txt
tests/src/: external_1.cpp
viennacl/: abstract_kernel.hpp  compatible_handle.hpp  compressed_matrix.hpp  context.hpp  coordinate_matrix.hpp  device.hpp  device_capabilities.hpp  forwards.h  matrix.hpp  sliced_ell_matrix.hpp  vector.hpp
viennacl/backend/: hsa.hpp  mem_handle.hpp  memory.hpp  opencl.hpp
viennacl/device_specific/: execute.hpp  execution_handler.hpp  lazy_program_compiler.hpp  utils.hpp
viennacl/device_specific/builtin_database/: common.hpp  matrix_axpy.hpp  matrix_product.hpp  reduction.hpp  row_wise_reduction.hpp  vector_axpy.hpp
viennacl/device_specific/templates/: matrix_axpy_template.hpp  matrix_product_template.hpp  reduction_template.hpp  row_wise_reduction_template.hpp  template_base.hpp  vector_axpy_template.hpp
viennacl/hsa/: backend.hpp  brig_compiler.hpp  brig_helper.hpp  command_queue.hpp  context.hpp  device.hpp  device_utils.hpp  enqueue.hpp  error.hpp  forwards.h  handle.hpp  kernel.hpp  local_mem.hpp  platform.hpp  program.hpp  utils.hpp
viennacl/hsa_device_specific/: execute.hpp  execution_handler.hpp  forwards.h  lazy_program_compiler.hpp  mapped_objects.hpp  tree_parsing.hpp  utils.hpp
viennacl/hsa_device_specific/builtin_database/: common.hpp  matrix_axpy.hpp  matrix_product.hpp  reduction.hpp  row_wise_reduction.hpp  vector_axpy.hpp
viennacl/hsa_device_specific/templates/: matrix_axpy_template.hpp  matrix_product_template.hpp  reduction_template.hpp  row_wise_reduction_template.hpp  template_base.hpp  utils.hpp  vector_axpy_template.hpp
viennacl/linalg/: amg_operations.hpp  direct_solve.hpp  fft_operations.hpp  ilu_operations.hpp  iterative_operations.hpp  matrix_operations.hpp  misc_operations.hpp  nmf.hpp  scalar_operations.hpp  sparse_matrix_operations.hpp  vector_operations.hpp
viennacl/linalg/host_based/: sparse_matrix_operations.hpp
viennacl/linalg/hsa/: amg_operations.hpp  bisect_kernel_calls.hpp  common.hpp  direct_solve.hpp  fft_operations.hpp  ilu_operations.hpp  iterative_operations.hpp  matrix_operations.hpp  misc_operations.hpp  nmf_operations.hpp  scalar_operations.hpp  sparse_matrix_operations.hpp  vandermonde_matrix_operations.hpp  vector_operations.hpp
viennacl/meta/: predicate.hpp
viennacl/ml/: knn.hpp  knn_sliding_window.hpp  sgd.hpp  sort.hpp  weights_update.hpp
viennacl/ocl/: backend.hpp  context.hpp  device.hpp  device_utils.hpp  enqueue.hpp  kernel.hpp  platform.hpp  program.hpp  utils.hpp
viennacl/scheduler/: preset.hpp  preset_hsa.hpp
viennacl/traits/: context.hpp  handle.hpp
(+59 files in other folders)
